# docloop

./: .gitignore  DOCLOOP_REVIEW.md  README.md  Reflow_enhancement_plan.md  Reflow_workspace_enhancement.md  SUPERLOOP_PHASE_EXECUTION_RESUME_FIXES_PRD.md  SUPERLOOP_PRD_DECOMPOSITION_SAD.md  docloop.py  loop_control.py  prompt_guideline.md  pyproject.toml  reflow.py  reflow_SAD_v1.2.md  superloop.py
.superloop/: context.md  raw_phase_log.md  run_log.md
.superloop/implement/: feedback.md  implementation_notes.md  prompt.md  verifier_prompt.md
.superloop/plan/: feedback.md  plan.md  prompt.md  verifier_prompt.md
.superloop/test/: prompt.md  verifier_prompt.md
Fuzzy/: SAD.md  UTILITY_ROADMAP.md  docloop_run_report.md  fuzzy_idea.md  fuzzy_product_spec.md  fuzzy_roadmap.md  pyproject.toml  superloop_full_roadmap_intent.md  superloop_remaining_all_areas_intent.md  superloop_remaining_roadmap_intent.md
Fuzzy/.docloop/: context.md  criteria.md  progress.txt  prompt.md  update_prompt.md  update_verifier_prompt.md  verifier_prompt.md
Fuzzy/examples/: django_lead_service.py  fastapi_support.py  queue_document_worker.py
Fuzzy/fuzzy/: __init__.py  adapters.py  (+12 more)
refined_reflow_v1.2/: SAD.md
reflow/: SAD.md  source.md
reflow_runtime/: __init__.py  controller.py  loaders.py  models.py  policy.py  protocol.py  providers.py  scaffold.py  storage.py
tests/: test_loop_control.py  test_refined_reflow_sad.py  test_reflow_runtime.py  test_superloop_git_tracking.py  test_superloop_observability.py
triage-stage1/: .env.example  README.md  alembic.ini  requirements.txt
(+457 files in other folders)
